More spacing fixes

--- a/src/resources/elements/activity/activity.css
+++ b/src/resources/elements/activity/activity.css
@@ -9,10 +9,7 @@
 .emoji {
   display: inline-block;
   position: relative;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin: 0rem 0.5rem;
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
