--- a/src/resources/elements/entry/entry-editor.css
+++ b/src/resources/elements/entry/entry-editor.css
@@ -4,6 +4,7 @@
   position: sticky;
   top: 0;
   z-index: 50;
+  padding: 0.25rem;
 }
 .drawer-activity {
   vertical-align: top;
